models structure created

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,23 @@
 #Generated from Djecrety Django Secret Key Generator
 SECRET_KEY=p-6xz7gk#-1i4idsys=git@d663&p9#!b8=m2s)r0-#0o+t^y=
 
-DEBUG=True
+DEBUG=False
 
 ACCESS_TOKEN_LIFETIME=30 
 REFRESH_TOKEN_LIFETIME=7
+
+ALLOWED_HOSTS=localhost,127.0.0.1,backend
+
+POSTGRES_DB=postgres
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root@1234
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# pgAdmin Login
+# PGADMIN_DEFAULT_EMAIL=admin@example.com
+# PGADMIN_DEFAULT_PASSWORD=admin123
+
+TF_ENABLE_ONEDNN_OPTS=0
 
 
